# ObjectFusion_ComfyUI_nodes

./: README.md  __init__.py  myreqs.txt  pyproject.toml  requirements.txt
CROP_OBJECT/: __init__.py  crop.py
Custom_ComfyUI-YoloWorld-EfficientSAM/: .gitignore  YOLO_WORLD_EfficientSAM.py
Custom_ComfyUI_YoloWorld_EfficientSAM/: YOLO_WORLD_EfficientSAM.py  check_sam.ipynb
Custom_comfyui-llm-assistant/: AssistantNodes.py  README.md
Custom_comfyui_llm_assistant/: AssistantNodes.py  config.yaml  requirements.txt
comfyui-llm-assistant/: .gitignore  config.yaml  pyproject.toml
workflows/: ObjectFusion.json
